fixed minor css bug on mobile causing listing to not be centered

--- a/frontend/src/components/Spots/Spots.css
+++ b/frontend/src/components/Spots/Spots.css
@@ -27,6 +27,7 @@ p {
     grid-template-columns: repeat(auto-fit, minmax(250px, .25fr));
     max-width: 100%;
     gap: 50px;
+    justify-content: center;
 }
 
 .spots{
